--- a/PastelBedrom.css
+++ b/PastelBedrom.css
@@ -3,6 +3,7 @@
  * @author TallishFire79#5537
  * @version 1.0
  * @description It's just cute.
+ * @source https://github.com/TallishDev/PastelBedromDiscordTheme
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=RocknRoll+One&family=Shadows+Into+Light&family=Varela+Round&display=swap');
